--- a/package.json
+++ b/package.json
@@ -9,23 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "next": "^15.1.3",
-    "framer-motion": "^11.15.0",
     "@codesandbox/sandpack-react": "^2.19.11",
+    "@supabase/supabase-js": "^2.90.1",
+    "@tanstack/react-query": "^5.90.16",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.15.0",
     "lucide-react": "^0.468.0",
-    "clsx": "^2.1.1"
+    "next": "^15.1.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "typescript": "^5.7.2",
     "@types/node": "^22.10.2",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "autoprefixer": "^10.4.20",
+    "dotenv": "^17.2.3",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "^15.1.3",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.17.0",
-    "eslint-config-next": "^15.1.3"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
   }
 }
